--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,7 @@
+/*Import antd css*/
+@import '~antd/dist/antd.css';
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34
 }
 
 code {
